task: Trabajo Finalizado - se agrego dependencias para usar iconos

--- a/Rios_Diego_2700_TP8/src/main/resources/application.properties
+++ b/Rios_Diego_2700_TP8/src/main/resources/application.properties
@@ -16,4 +16,11 @@ spring.jpa.generate-ddl = true
 #spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.hibernate.ddl-auto = update
 
+# usuario por defecto
+spring.security.user.name = admin
+# password por defecto
+spring.security.user.password = admin
+# roles por defecto
+spring.security.user.roles =
+
 
